# quantdb

./: .env.example  .gitignore  README.md  pyproject.toml
docs/postmortems/: 2026-07-16-tushare-pagination-truncation.md
src/quantdb/: __init__.py  cli.py  config.py  db.py  errors.py  progress.py  provider.py  registry.py  store.py  sync.py
tests/: test_cli.py  test_config.py  test_market.py  test_progress.py  test_provider.py  test_sync.py
